# renderer

./: CMakeLists.txt  LICENSE  README.md
src/: geometry.cpp  geometry.h  main.cpp
